[package]
name = "holani-retro"
version = "0.9.9"
edition = "2021"
rust-version = "1.84"

[dependencies]
holani = { path = "../holani", features = [ "comlynx_external" ] }
log = { version = "0.4.29", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
libretro-rs = { git = "https://github.com/LLeny/libretro-rs.git", branch = "netpacket" }
lazy_static = "1.5.0"

[lib]
name = "holani"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "thin"